# multiexp-lambda

./: README.md  ToInstall.txt
aws-lambda-cpp/multiexp/: CMakeLists.txt  main.cpp  run.sh
aws-lambda-cpp/multiexp/build1/: CMakeCache.txt  Makefile  cmake_install.cmake  multiexp  output.txt
test_lambda_cpp/: .test_lambda.cpp.swp  CMakeLists.txt  run.sh  test_lambda.cpp
